<resources>
	<string name="default_scheme">content</string>
	<string name="default_host">com.citymaps.mobile.android</string>
	<string name="hello_world">Hello world!</string>
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="user_full_name_format">%1$s %2$s</string>
	<string name="action_settings">Settings</string>
	<string name="action_profile">Profile</string>
	<string name="action_friend_finder">Friend Finder</string>
	<string name="action_search">Search</string>
	<string name="action_explore">Explore</string>
	<string name="action_submit">Submit</string>
	<string name="collection_activity_title">Collection</string>
	<string name="place_activity_title">Place</string>
	<string name="user_activity_title">Profile</string>
	<string name="explore_activity_title">Explore</string>
	<string name="explore_best_around">Best Around %s</string>
	<string name="explore_best_around_me">Best Around Me</string>
	<string name="explore_featured_collections">Featured Collections</string>
	<string name="explore_featured_mappers">Featured Mappers</string>
	<string name="explore_featured_deals">Featured Deals</string>
	<string name="explore_view_all">view all</string>
	<string name="explore_my_places">My Places</string>
	<string name="explore_friends_places">Friends\' Places</string>
	<string name="explore_hero_no_items">No suggestions found\nfor this location</string>
	<string name="explore_featured_collections_no_items">No collections found\nfor this location</string>
	<string name="explore_featured_mappers_no_items">No mappers found\nfor this location</string>
	<string name="explore_featured_deals_no_items">No deals found\nfor this location</string>
	<string name="card_follow_user">Follow %s</string>
	<string name="card_unfollow_user">Unfollow %s</string>
	<string name="card_created_by">Created by</string>
	<string name="card_deal_by">Deal by</string>
	<plurals name="card_followers">
		<item quantity="one">%d follower</item>
		<item quantity="other">%d followers</item>
	</plurals>
	<string name="card_currency_symbol">$</string>
	<string name="card_view_all_hero">View All Best Around</string>
	<string name="card_view_all_featured_collections">View All Featured Collections</string>
	<string name="card_view_all_featured_mappers">View All Featured Mappers</string>
	<string name="card_view_all_featured_deals">View All Featued Deals</string>
	<string name="view_all_header_hero_title2">Best Around</string>
	<string name="view_all_header_featured_title1">Featured</string>
	<string name="view_all_header_featured_collections_title2">Collections</string>
	<string name="view_all_header_featured_mappers_title2">Mappers</string>
	<string name="view_all_header_featured_deals_title2">Deals</string>
	<string name="view_all_filter_everything">Everything</string>
	<string name="preferences_activity_title">Settings</string>
	<string name="pref_cat_support_title">Support</string>
	<string name="pref_about_title">About Citymaps</string>
	<string name="pref_add_business_title">Add Your Business</string>
	<string name="pref_privacy_title">Privacy Policy</string>
	<string name="pref_terms_title">Terms of Use</string>
	<string name="pref_credits_title">Credits</string>
	<string name="pref_developer_mode_title">Developer Mode</string>
	<string name="pref_cat_profile_title">Profile</string>
	<string name="pref_edit_profile_title">Edit Your Profile</string>
	<string name="pref_change_password_title">Change Your Password</string>
	<string name="pref_cat_third_party_title">Third Party</string>
	<string name="pref_connect_third_party_apps_title">Connect Third Party Apps</string>
	<string name="pref_invite_friends_title">Invite Friends</string>
	<string name="pref_cat_notifications_title">Notifications</string>
	<string name="pref_set_notifications_title">Set Notifications</string>
	<string name="pref_cat_share_app_title">Share app</string>
	<string name="pref_share_app_title">Share app with friends</string>
	<string name="pref_cat_accounts_title">Connect Your Accounts</string>
	<string name="pref_connect_facebook_title">Facebook</string>
	<string name="pref_connect_google_title">Google</string>
	<string name="pref_connect_twitter_title">Twitter</string>
	<string name="pref_email_notifications_title">Receive email notifications</string>
	<string name="pref_cat_info_title">Info</string>
	<string name="pref_support_title">Support</string>
	<string name="pref_tour_title">Tour</string>
	<string name="pref_submit_business_title">Submit a Business</string>
	<string name="pref_business_owner">Business owner? Add your logo!</string>
	<string name="pref_feedback_title">Send Feedback</string>
	<string name="pref_cat_more_title">More</string>
	<string name="pref_cat_signin_title">Sign In</string>
	<string name="pref_signin_title">Sign in</string>
	<string name="pref_cat_signout_title">Sign Out</string>
	<string name="pref_signout_title">Sign out</string>
	<string name="pref_cat_dev_general_title">Edit Hostnames</string>
	<string name="pref_dev_server_title">Server</string>
	<string name="pref_dev_api_server_title">API Server</string>
	<string name="pref_dev_search_server_title">Search Server</string>
	<string name="pref_dev_mobile_server_title">Mobile Server</string>
	<string name="pref_dev_assets_server_title">Assets Server</string>
	<string name="pref_dev_map_tile_server_title">Map Tile Server</string>
	<string name="pref_dev_business_tile_server_title">Business Tile Server</string>
	<string name="pref_dev_region_tile_server_title">Region Tile Server</string>
	<string name="pref_dev_network_cache_title">Network Cache</string>
	<string name="pref_dev_android_version_title">Android Version</string>
	<string name="pref_dev_api_version_title">API Version</string>
	<string name="pref_dev_device_id_title">Device ID</string>
	<string name="pref_dev_push_notification_token">Push Notification Token</string>
	<string name="pref_share_app_intent_title">Share App with Friends</string>
	<string name="pref_developer_mode_dialog_title">Developer Mode</string>
	<string name="pref_developer_mode_incorrect_password">Incorrect password.</string>
	<string name="pref_developer_mode_enable">Enable</string>
	<string name="pref_developer_mode_summary_enable">Enabled</string>
	<string name="pref_dev_api_version_summary_last_known">(Last known version: %s)</string>
	<string name="pref_dev_api_version_summary_getting">Getting API version…</string>
	<string name="pref_dev_api_version_summary_error">Error: %s</string>
	<string name="pref_share_email">Email</string>
	<string name="pref_share_sms">SMS</string>
	<string-array name="pref_share_entries">
		<item>Email</item>
		<item>SMS</item>
	</string-array>
	<string name="pref_share_chooser_text">Share App</string>
	<string name="pref_share_app_text">Check out Citymaps, your personalized map of places. Download now: http://ctym.ps/1nebhVl</string>
	<string name="pref_share_app_email_subject">Get Citymaps</string>
	<string name="pref_share_app_email_text">Hi there,\n\nCheck out Citymaps, your personalized map of places.\n\nDownload now: http://ctym.ps/1nebhVl</string>
    <string name="pref_share_app_email_html"><![CDATA[
        Hi there,
		<p>Check out Citymaps, your personalized map of places.</p>
		<p>Download now: <a href="http://ctym.ps/1nebhVl">http://ctym.ps/1nebhVl</a></p>
	]]>
    </string>
	<string name="pref_third_party_connecting">Connecting…</string>
	<string name="pref_signout_dialog_title">Sign Out</string>
	<string name="pref_signout_dialog_message">Are you sure you want to sign out?</string>
	<string name="pref_profile_activity_title">Profile</string>
	<string name="pref_third_party_activity_title">Third Party Apps</string>
	<string name="pref_notifications_activity_title">Notifications</string>
	<string name="pref_developer_activity_title">Developer Settings</string>
	<string name="pref_developer_password_dialog_enter_password">Enter password:</string>
	<string name="pref_developer_password_dialog_show_password">Show password</string>
	<string name="pref_developer_mode_welcome_developer">Welcome, developer!</string>
	<string name="add_business_activity_title">Add Your Business</string>
	<string name="invite_friends_activity_title">Invite Friends</string>
	<string name="tour_activity_title">Tour</string>
	<string name="tour_skip">Skip</string>
	<string name="loc_activity_title">Enable Location</string>
	<string name="loc_tagline">Enable location</string>
	<string name="loc_message">Citymaps uses your GPS location to display places and activity on the map. We will never share your location with third parties. It\'s completely private and secure.</string>
	<string name="loc_settings_button_text">Settings</string>
	<string name="loc_skip_button_text">Skip</string>
	<string name="loc_dialog_title">Enable Location</string>
	<string name="loc_dialog_message">@string/loc_message</string>
	<string name="loc_dialog_settings_button_text">Settings</string>
	<string name="loc_dialog_skip_button_text">Skip</string>
	<string name="update_hard_tagline">Time to update</string>
	<string name="update_hard_message">There is a new version of Citymaps.\nThis version is no longer supported.</string>
	<string name="update_hard_button_text">Update Citymaps now</string>
	<string name="update_soft_dialog_title">Update Citymaps</string>
	<string name="update_soft_dialog_message">A new version of Citymaps is available in the Google Play™ store.</string>
	<string name="update_soft_dialog_later_button_text">Later</string>
	<string name="update_soft_dialog_udpate_button_text">Update</string>
	<string name="update_soft_dialog_skip_button_text">Skip</string>
	<string name="update_soft_dialog_reminder">You will be reminded again in a few days.</string>
	<string name="signin_authenticate_tagline">Your personal map of\nthe places you love</string>
	<string name="signin_authenticate_facebook">Log in with Facebook</string>
	<string name="signin_authenticate_google">Sign in with Google</string>
	<string name="signin_authenticate_create_account">Create Account</string>
	<string name="signin_authenticate_have_an_account">Have an account?</string>
	<string name="signin_authenticate_signin">Sign In</string>
	<string name="signin_authenticate_skip">Skip</string>
	<string name="signin_activity_title">Sign In</string>
	<string name="signin_username_hint">Username</string>
	<string name="signin_password_hint">Password</string>
	<string name="signin_create_account">Create Account</string>
	<string name="signin_reset_password">Reset Password</string>
	<string name="signin_create_account_activity_title">Create Account</string>
	<string name="signin_create_account_first_name_hint">First Name</string>
	<string name="signin_create_account_last_name_hint">Last Name</string>
	<string name="signin_create_account_username_hint">Username</string>
	<string name="signin_create_account_email_hint">Email</string>
	<string name="signin_create_account_password_hint">Password</string>
	<string name="signin_create_account_confirm_password_hint">Confirm Password</string>
    <string name="signin_create_account_disclaimer"><![CDATA[
		By creating an account, I accept Citymaps\'<br>
		<b><a href="citymaps.internal://com.citymaps.mobile.android/signin?q=terms_of_service">Terms of Service</a></b> and
		<b><a href="citymaps.internal://com.citymaps.mobile.android/signin?q=privacy_policy">Privacy Policy</a></b>
	]]>
    </string>
	<string name="signin_create_account_use_third_party_info">Would you like to fill this form with information from your %s profile?</string>
	<string name="signin_reset_password_activity_title">Reset Password</string>
	<string name="signin_reset_password_email_address_hint">Email address</string>
	<string name="signin_reset_password_confirm_email_hint">Confirm email</string>
	<string name="signin_reset_password_instructions">Please provide your email address and we will send you a link to reset your Citymaps password.</string>
</resources>