<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto"
	  xmlns:tools="http://schemas.android.com/tools"
	  tools:context=".MainActivity">

	<item
			android:id="@+id/action_profile"
			android:title="@string/action_profile"
			android:icon="@drawable/ic_person_white_24dp"
			app:showAsAction="always" />

	<item
			android:id="@+id/action_friend_finder"
			android:title="@string/action_friend_finder"
			android:icon="@drawable/ic_people_white_24dp"
			app:showAsAction="always" />

	<item
			android:id="@+id/action_search"
			android:title="@string/action_search"
			android:icon="@drawable/ic_search_white_24dp"
			app:showAsAction="always" />

	<item
			android:id="@+id/action_settings"
			android:title="@string/action_settings"
			android:orderInCategory="100"
			app:showAsAction="never" />

</menu>
