<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:paddingLeft="@dimen/activity_horizontal_margin"
			  android:paddingRight="@dimen/activity_horizontal_margin"
			  android:paddingTop="@dimen/activity_vertical_margin"
			  android:paddingBottom="@dimen/activity_vertical_margin"
			  android:orientation="vertical"
			  android:gravity="center_horizontal"
			  android:focusableInTouchMode="true"
			  tools:context="com.citymaps.mobile.android.view.housekeeping.SigninFragment">

	<EditText
			android:id="@+id/signin_username"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="text|textNoSuggestions"
			android:hint="@string/signin_username_hint" />

	<EditText
			android:id="@+id/signin_password"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textPassword"
			android:imeOptions="actionGo"
			android:hint="@string/signin_password_hint" />

	<Button
			android:id="@+id/signin_create_account_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/signin_create_account"
			style="?android:borderlessButtonStyle" />

	<Button
			android:id="@+id/signin_reset_password_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/signin_reset_password"
			style="?android:borderlessButtonStyle" />

</LinearLayout>
