<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				xmlns:citymaps="http://schemas.android.com/apk/res-auto"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical"
				tools:context="com.citymaps.mobile.android.view.onboard.EnableLocationActivity">

	<com.citymaps.mobile.android.widget.RatioImageView
			android:id="@+id/loc_header_image"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:src="@drawable/cm_header_16_9"
			android:scaleType="centerCrop"
			citymaps:ratio="1.77777778" />

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_below="@id/loc_header_image"
			android:layout_alignParentBottom="true"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingTop="@dimen/activity_vertical_margin"
			android:paddingBottom="@dimen/activity_vertical_margin"
			android:orientation="vertical"
			android:gravity="center_horizontal">

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/component_baseline_grid"
				android:padding="@dimen/type_baseline_grid"
				android:gravity="center"
				android:text="@string/loc_header_title"
				android:textAppearance="?android:textAppearanceLarge" />

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/component_baseline_grid"
				android:padding="@dimen/type_baseline_grid"
				android:gravity="center"
				android:text="@string/loc_message"
				android:textAppearance="?android:textAppearanceMedium" />

		<Space
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1" />

		<Button
				android:id="@+id/loc_settings_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/loc_settings_button_text"
				android:onClick="onButtonClick" />

		<Button
				android:id="@+id/loc_skip_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/loc_skip_button_text"
				android:onClick="onButtonClick" />

	</LinearLayout>

</RelativeLayout>
